    dynamically using ucf, triggered by watching /usr/sbin/logrotate.
    This eases dist-upgrades that upgrade logrotate to >= 3.8 from an older
    version (squeeze->wheezy, precise->trusty).
  * postgresql-common.postinst: Stop debconf later so ucf can use it.
  * postgresql-common.postinst: Call su without - to avoid a warning.
  * t/020_create_sql_remove.t: Make pipe writes unbuffered.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 09 Jan 2014 12:49:19 +0100

postgresql-common (152) unstable; urgency=low

  [ Martin Pitt ]
  * debian/backport-ppa: Drop oneiric/quantal for -9.2, only keep
    lucid/precise.
  * Drop support for obsolete oom_adj, all kernels in all supported
    Debian/Ubuntu releases support oom_score_adj. (See #646245)
  * debian/README.Debian: Fix commands to get a postgres user shell.
  * Change all "su" invocations to system user to specify an explicit shell,
    to fix breakage after latest base-passwd 3.5.30 (which changed system
    users to have no shell).
  * Bump Standards-Version to 3.9.5 (no changes necessary).

  [ Christoph Berg ]
  * pg_virtualenv: Fix program name in manpage.
  * pg_createcluster: --start-conf should override the value from
    createcluster.conf.
  * testsuite: Also mount a tmpfs on /etc/postgresql-common.

 -- Martin Pitt <mpitt@debian.org>  Thu, 09 Jan 2014 10:56:12 +0100

postgresql-common (151) unstable; urgency=low

  * pg_createcluster: Create /var/run/postgresql when missing.
  * pg_virtualenv: Set PG_CONFIG in single version mode.
  * pg_wrapper: Always use the latest available version of "pg_isready"
    instead of the target cluster's. pg_isready appeared only in 9.3, but is
    usable with older versions as well. Suggested by Peter Eisentraut.
    (Closes: #728599)

 -- Christoph Berg <myon@debian.org>  Thu, 05 Dec 2013 16:32:51 +0100

postgresql-common (150) unstable; urgency=low

  [ Christoph Berg ]
  * Create the postgres group when missing, and add the postgres user to it.