@@ -6,6 +6,7 @@ postgresql-common (153) UNRELEASED; urgency=medium
     version (squeeze->wheezy, precise->trusty).
   * postgresql-common.postinst: Stop debconf later so ucf can use it.
   * postgresql-common.postinst: Call su without - to avoid a warning.
+  * t/003_package_checks.t: Add test case for logrotate.
   * t/020_create_sql_remove.t: Make pipe writes unbuffered.
 
  -- Christoph Berg <christoph.berg@credativ.de>  Thu, 09 Jan 2014 12:49:19 +0100
